avoid that the top nav overlaps the logo on the home page. fixes #15

--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -1,6 +1,6 @@
 .hero {
   height: 100%;
-  min-height: 310px;
+  min-height: 410px;
   position: relative;
   background: $red; // fallback
   background: linear-gradient(120deg, $gold 20%, $red 80%);
@@ -21,5 +21,6 @@
     right: 0;
     padding: 0 1rem;
     transform: translateY(-50%);
+    margin-top: 3rem;
   }
 }
